--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-		<title>GOPI - Home</title>
+		<title>GOPI|Home</title>
 	<meta name="author" content="Russell">
 	<meta name="description" content="description here">
 	<meta name="keywords" content="keywords,here">
@@ -51,14 +51,32 @@
 
 					</div>
 
+					<!-- Div containing the carousel gallery -->
+					<div class="section__carousel">
+						<div class="test"></div>
+					</div>
+
 					<!-- Button positioned after the article -->
-					<div class="section__article--btn">
+					<div class="section__btn">
 						<label class="btn">Join Today</label>
 					</div>
 
-					<!-- Div containing the carousel gallery -->
-					<div class="section__carousel">
+					<!-- Information regaurding the next clean up taking place around the Inlet -->
+					<div class="section__article">
+						
+						<h2>Inlet Clean Up</h2>
+						<p>This year's Inlet Clean-up will be held on Sunday 3 November. <br>Meet at Browns Bay, 10:30am wet or dry<br> More information can be found <a href="http://www.gopi.org.nz/assets/Clean-up/Clean-up-2019.pdf" target="_blank">here</a></p>
 
+					</div>
+
+					<!-- Gallery of images using flex box to reorganise itself -->
+					<div class="section__gallery">
+						<div class="test"></div>
+					</div>
+
+					<!-- Button for donating to the organisation -->
+					<div class="section__btn">
+						<label class="btn">Donate Today</label>
 					</div>
 
 				</div>
