--- a/index.html
+++ b/index.html
@@ -90,5 +90,9 @@
 			
 		</div>
 
+		<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+		<script type="text/javascript" src="../js/script.js"></script>
+
 	</body>
 </html>
