created desktop nav

--- a/index.html
+++ b/index.html
@@ -35,9 +35,17 @@
 			<div class="body">
 
 				<!-- Holds the navigation menu for desktop-->
-				<div class="nav">
+				<nav id="desktop">
 
-				</div>
+					<ul>
+						<a href="index.html"><li>Home</li></a>
+						<a href="#"><li>Educational Resources</li></a>
+						<a href="pages/articles.html"><li>Articles</li></a>
+						<a href="pages/joinUs.html"><li class="highlighted">Join Us</li></a>
+						<a href="#"><li class="highlighted">Donations</li></a>
+					</ul>
+
+				</nav>
 				
 				<!-- Holds the articles and content of the website -->
 				<div class="section">
@@ -92,7 +100,7 @@
 
 		<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-		<script type="text/javascript" src="../js/script.js"></script>
+		<script type="text/javascript" src="js/script.js"></script>
 
 	</body>
 </html>
