--- a/pages/joinUs.html
+++ b/pages/joinUs.html
@@ -34,6 +34,19 @@
 			<!-- Nuts and bolts of the site, Contains the sections and navigation -->
 			<div class="body">
 
+				<!-- Holds the navigation menu for desktop-->
+				<nav id="desktop">
+
+					<ul>
+						<a href="../index.html"><li>Home</li></a>
+						<a href="#"><li>Educational Resources</li></a>
+						<a href="articles.html"><li>Articles</li></a>
+						<a href="joinUs.html"><li class="highlighted">Join Us</li></a>
+						<a href="#"><li class="highlighted">Donations</li></a>
+					</ul>
+
+				</nav>
+
 				<!-- Holds the articles and content of the website -->
 				<div class="section__article">
 
