--- a/pages/template.html
+++ b/pages/template.html
@@ -11,6 +11,8 @@
 		<link rel="stylesheet" href="../css/style.css" type="text/css">
 		<link href="https://fonts.googleapis.com/css?family=Lexend+Deca|Nunito|PT+Mono&display=swap" rel="stylesheet">
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+		<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 	</head>
 	<body>
 		
