button revealing card processing completed

--- a/pages/joinUs.html
+++ b/pages/joinUs.html
@@ -206,7 +206,7 @@
 							</div>
 
 							<!-- Card details -->
-							<div class="member__payment active" id="cardDetails">
+							<div class="member__payment hidden"  id="cardDetails">
 
 								<label for="card-number" class="member__label">Card Number:</label>
 
@@ -230,7 +230,6 @@
 									<input type="text" name="card-cvc" id="cvc" class="member__text member__text--cvc">
 
 								</div>
-
 							</div>
 						</div>
 
