created articles and education pages

--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1">
-		<title>GOPI | Template</title>
+		<title>GOPI | Join Us</title>
 		<meta name="author" content="Russell">
 		<meta name="description" content="description here">
 		<meta name="keywords" content="keywords,here">
-		<link rel="shortcut icon" href="../assets/logo.png" type="image/vnd.microsoft.icon">
+		<link rel="shortcut icon" href="assets/logo.png" type="image/vnd.microsoft.icon">
 		<link rel="stylesheet" href="css/style.css" type="text/css">
 		<link href="https://fonts.googleapis.com/css?family=Lexend+Deca|Nunito|PT+Mono&display=swap" rel="stylesheet">
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+		<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 	</head>
 	<body>
 		
@@ -30,7 +33,7 @@
 					<nav id="mobile">
 						<ul>
 							<a href="index.html"><li>Home</li></a>
-							<a href="#"><li>Educational Resources</li></a>
+							<a href="pages/education.html"><li>Educational Resources</li></a>
 							<a href="pages/articles.html"><li>Articles</li></a>
 							<a href="pages/joinUs.html"><li class="highlighted">Join Us</li></a>
 							<a href="#"><li class="highlighted">Donations</li></a>
@@ -64,8 +67,9 @@
 				<!-- Holds the articles and content of the website -->
 				<div class="section">
 					
+					<h2>Welcome to The Guardians of P&amacr;uatahnui Inlet</h2>
+					
 					<div class="section__article">
-						<h2>Welcome to The Guardians of P&amacr;uatahnui Inlet</h2>
 
 						<p>P&amacr;uatahanui Inlet is the only large estuarine wetland left in the lower half of New Zealand's North Island. It is at risk, mainly from human activities in both the Inlet and its catchment. We call ourselves the 'Guardians of Pāuatahanui Inlet' because we work to promote recognition of the ecological, recreational and cultural values of the Inlet.</p>
 
@@ -79,9 +83,11 @@
 					</div>
 
 					<!-- Button positioned after the article -->
-					<div class="section__btn">
-						<label class="btn">Join Today</label>
-					</div>
+					<a class="btn-link" href="pages/joinUs.html">
+						<div class="section__btn btn">
+							<p class="btn">Join Today</p>
+						</div>
+					</a>
 
 					<!-- Information regaurding the next clean up taking place around the Inlet -->
 					<div class="section__article">
@@ -97,9 +103,11 @@
 					</div>
 
 					<!-- Button for donating to the organisation -->
-					<div class="section__btn">
-						<label class="btn">Donate Today</label>
-					</div>
+					<a class="btn-link" href="#">
+						<div class="section__btn btn">
+							<p class="btn">Donate Today</p>
+						</div>
+					</a>
 
 				</div>
 
