--- a/pages/joinUs.html
+++ b/pages/joinUs.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width,initial-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>GOPI | Join Us</title>
 		<meta name="author" content="Russell">
 		<meta name="description" content="description here">
@@ -32,7 +32,7 @@
 					<nav id="mobile">
 						<ul>
 							<a href="../index.html"><li>Home</li></a>
-							<a href="#"><li>Educational Resources</li></a>
+							<a href="education.html"><li>Educational Resources</li></a>
 							<a href="articles.html"><li>Articles</li></a>
 							<a href="joinUs.html"><li class="highlighted">Join Us</li></a>
 							<a href="#"><li class="highlighted">Donations</li></a>
@@ -192,15 +192,15 @@
 							<!-- button containers -->
 							<div class="member__payment">
 								<!-- Credit or debit card -->
-								<span class="btn btn__payment btn__card" id="card">
+								<span class="btn__payment btn__card" id="card">
 									<p>Credit/Debit Card</p>
 								</span>
 								<!-- Direct Debit -->
-								<span class="btn btn__payment btn__d-debit" id="ddbt">
+								<span class="btn__payment btn__d-debit" id="ddbt">
 									<p>Direct Debit</p>
 								</span>
 								<!-- PayPal -->
-								<span class="btn btn__payment btn__paypal" id="pp">
+								<span class="btn__payment btn__paypal" id="pp">
 									<p>PayPal</p>
 								</span>
 							</div>
