--- a/pages/education.html
+++ b/pages/education.html
@@ -32,7 +32,7 @@
 					<nav id="mobile">
 						<ul>
 							<a href="../index.html"><li>Home</li></a>
-							<a href="education.html"><li>Educational Resources</li></a>
+							<a href="#"><li>Educational Resources</li></a>
 							<a href="articles.html"><li>Articles</li></a>
 							<a href="joinUs.html"><li class="highlighted">Join Us</li></a>
 							<a href="#"><li class="highlighted">Donations</li></a>
@@ -64,7 +64,7 @@
 				<!-- Holds the articles and content of the website -->
 				<div class="section">
 
-					<h2>Articles</h2>
+					<h2>Education</h2>
 
 					<div class="section__articles">
 
